Updated files for CSS changes

--- a/views/pages/misc/staffmenu.html
+++ b/views/pages/misc/staffmenu.html
@@ -1,10 +1,10 @@
 
-  <div class="menu">
+  <div class="w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black">
     <h1>Naylor Learning Center</h1>
     <h2>Staff Menu</h2>
-    <p><button class="w3-btn w3-block w3-red" onclick="window.location.href = '/browser';">Register this browser for attendance tracking</button></p>
-    <p><button class="w3-btn w3-block w3-red" onclick="window.location.href = '/student';">View Students</button></p>
-    <p><button class="w3-btn w3-block w3-red" onclick="window.location.href = '/visit';">View Visits</button></p>
-    <p><button class="w3-btn w3-block w3-red" onclick="window.location.href = '/staff/<%= userId %>/edit';">Update your profile</button></p>
-    <p><button class="w3-btn w3-block w3-red" onclick="window.location.href = '/logout';">Log out</button></p>
+    <p><button class="w3-btn w3-block w3-white" onclick="window.location.href = '/browser';">Register this browser for attendance tracking</button></p>
+    <p><button class="w3-btn w3-block w3-white" onclick="window.location.href = '/student';">View Students</button></p>
+    <p><button class="w3-btn w3-block w3-white" onclick="window.location.href = '/visit';">View Visits</button></p>
+    <p><button class="w3-btn w3-block w3-white" onclick="window.location.href = '/staff/<%= userId %>/edit';">Update your profile</button></p>
+    <p><button class="w3-btn w3-block w3-white" onclick="window.location.href = '/logout';">Log out</button></p>
   </div>
