--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -1,3 +1,4 @@
+<div class="w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black">
 <form method="POST" action="/login">
     
     <h1>Davis &amp; Elkins College</h1>
@@ -11,8 +12,9 @@
         <input name="password" class="w3-input w3-border" placeholder="Password" type="password" required/>
     </div>
 
-    <div class = "button">
-        <button class="w3-btn w3-block w3-red" type="submit">Login</button>
+    <div class = "button w3-padding-16">
+        <button class="w3-btn w3-white" type="submit">Login</button>
     </div>
     
  </form>
+</div>
