add required to fields.

--- a/views/pages/staff/editForm.html
+++ b/views/pages/staff/editForm.html
@@ -11,12 +11,12 @@
 
   <div class = "w3-input">
     <label for="firstName">First name</label>
-    <input id="firstName" name="firstName" type="text" value="<%= formData.firstName %>">
+    <input id="firstName" name="firstName" type="text" value="<%= formData.firstName %>" required>
   </div>
 
   <div class = "w3-input">
     <label for="lastName">Last name</label>
-    <input id="lastName" name="lastName" type="text" value="<%= formData.lastName %>">
+    <input id="lastName" name="lastName" type="text" value="<%= formData.lastName %>" required>
   </div>
 
   <div class = "formPiece">
