--- a/views/pages/student/index.html
+++ b/views/pages/student/index.html
@@ -50,7 +50,7 @@ function filterName(x) {
         <button onclick="download()" class = "button downloadButton">Download this view</button>
     </a>
     <input type="text" id="visitSearch" onkeyup="filterName(1)" placeholder="Search for a Name..">
-    <table id="visitTable">
+    <table class="w3-table w3-striped">
         <thead>
             <tr>
                 <th>Student ID</th>
