--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -45,7 +45,7 @@ function filterName(x) {
 </script>
 
 <!-- Populate table -->
-<div style="overflow-x:auto;">
+<div style="overflow-y:auto;">
     <a id="link" download="visits.csv">
         <button onclick="download()" class = "button downloadButton">Download this view</button>
     </a>
