--- a/views/pages/student/editForm.html
+++ b/views/pages/student/editForm.html
@@ -1,52 +1,53 @@
 
-
+<div class="w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black">
 <form method="POST" action="<%= action %>" >
   <div>
     <h2>User Profile</h2>
   </div>
-    <div class = "w3-input">
+    <div>
       <label for="firstName" value="First Name">*First name</label>
-      <input id="firstName" name="firstName" type="text"  placeholder="First Name" autofocus maxlength="255" required value="<%= formData.firstName %>" > 
+      <input class="w3-input" id="firstName" name="firstName" type="text"  placeholder="First Name" autofocus maxlength="255" required value="<%= formData.firstName %>" > 
     </div>
   
-    <div class = "w3-input">
+    <div>
       <label for="lastName" value="Last Name">*Last name</label>
-      <input id="lastName" name="lastName" type="text" required value="<%= formData.lastName %>">
+      <input class="w3-input" id="lastName" name="lastName" type="text" required value="<%= formData.lastName %>">
     </div>
     
-    <div class = "w3-input">
+    <div class="w3-select">
       <label for="academicRank">*Academic Rank</label>
       <%- academicRank %>
     </div>
     
-    <div class = "w3-input">
+    <div class="w3-select">
       <label for="residentialStatus">*Residential Status</label>
       <%- residentialStatus %>
     </div>
     
-    <div class = "w3-input">
+    <div class="w3-select">
       <label for="majorOne">*Major 1</label>
       <%- majorOne %>
     </div>
     
-    <div class = "w3-input">
+    <div class="w3-select">
       <label for="majorTwo">Major 2</label>
       <%- majorTwo %>
     </div>
     
-    <div class = "w3-input">
+    <div class="w3-select">
       <label for="fallSport" class="sports">Fall sport</label>
       <%- fallSport %>
     </div>
 
-    <div class = "w3-input">
+    <div class="w3-select">
       <label for="springSport" id="springSports" class="sports">Spring sport</label>
       <%- springSport %>
     </div>
 
-    <div class = "w3-input">
-      <button id="submitButton" type="submit">Update</button>
+    <div class="button w3-padding-16">
+      <button class="w3-btn w3-white" id="submitButton" type="submit">Update</button>
     </div>
     
 
 </form>
+</div>
