--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -45,12 +45,12 @@ function filterName(x) {
 </script>
 
 <!-- Populate table -->
-<div style="overflow-y:auto;">
+<div class="w3-container w3-display-middle w3-center w3-table" style="overflow:auto;">
     <a id="link" download="visits.csv">
         <button onclick="download()" class = "button downloadButton">Download this view</button>
     </a>
     <input type="text" id="visitSearch" onkeyup="filterName(2)" placeholder="Search for a Name..">
-    <table id="visitTable">
+    <table class="w3-table w3-bordered" id="visitTable scrolltabe">
         <thead>
             <tr>
                 <th>#</th>
