--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -61,6 +61,7 @@
     <% } %>
 
     <% if ( role === "student" ) { %>
+      <%- include("../include/logoutTimer.html"); -%>
       <div class="topnav">
           <a href="/student/<%= userId %>/edit">Profile</a>
           <a href="/logout">Log out</a>
