Improve auto logout

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -37,20 +37,15 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
 
-
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/w3-theme-red.css">
     <link rel="stylesheet" href="/styles/w3.css">
     <!--STYLES END--> 
-
-
 </head>
 
 <body>
-
-  <% if ( typeof role !== "undefined" ) { %>
-
-    <% if ( role === "staff" ) { %>
+  <% if (typeof role !== "undefined") { %>
+    <% if (role === "staff") { %>
       <div class="topnav">
           <a class="active" href="/student">Students</a>
           <a href="/visit">Visits</a>
@@ -60,31 +55,27 @@
       </div>
     <% } %>
 
-    <% if ( role === "student" ) { %>
+    <% if (role === "student") { %>
       <%- include("../include/logoutTimer.html"); -%>
       <div class="topnav">
           <a href="/student/<%= userId %>/edit">Profile</a>
           <a href="/logout">Log out</a>
       </div>
     <% } %>
-    
   <% } %>
-
-  
   
   <% if (typeof banner !== "undefined") { %>
-  <div class = "w3-panel w3-green w3-display-container">
-  <span onclick="this.parentElement.style.display='none'" class="w3-button w3-display-topright">&times;</span>
-  <p><%= banner %></p>
-  </div>
-
+    <div class = "w3-panel w3-green w3-display-container">
+        <span onclick="this.parentElement.style.display='none'" class="w3-button w3-display-topright">&times;</span>
+        <p><%= banner %></p>
+    </div>
   <% } %>
+
   <div class="w3-container w3-center">
     <div class="w3-padding w3-border w3-border-red w3-display-middle">
-        <p><%- body %></p>
+        <%- body %>
     </div>
   </div>
-
 
     <!--
         Client-side Templates
@@ -154,6 +145,12 @@
     <!--SCRIPTS-->
     <script src="/js/logoutTimer.js"></script>
     <!--SCRIPTS END-->
+    
+  <% if (typeof role !== "undefined" && role === "student") { %>
+      <script>
+        setLogoutTimer();
+      </script>
+  <% } %>
 </body>
 
 </html>
