--- a/views/pages/student/index.html
+++ b/views/pages/student/index.html
@@ -45,12 +45,12 @@ function filterName(x) {
 </script>
 
 <!-- Populate table -->
-<div class="w3-container w3-display-middle w3-center w3-table" style="overflow-x:auto;">
+<div class="w3-table-all w3-center" style="overflow:scroll;">
     <a id="link" download="student.csv">
         <button onclick="download()" class = "button downloadButton">Download this view</button>
     </a>
     <input type="text" id="visitSearch" onkeyup="filterName(1)" placeholder="Search for a Name..">
-    <table class="w3-table w3-bordered">
+    <table>
         <thead>
             <tr>
                 <th>Student ID</th>
