Started adding pages and code for managing sports and majors.

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -54,6 +54,8 @@
       <div class="topnav">
           <a class="active" href="/student">Students</a>
           <a href="/visit">Visits</a>
+          <a href="/major">Majors</a>
+          <a href="/sports">Sports</a>
           <a href="/browser">Browser Registration</a>
           <a href="/staff/<%= userId %>/edit">Profile</a>
           <a href="/logout">Log out</a>
