--- a/views/pages/misc/browser.html
+++ b/views/pages/misc/browser.html
@@ -6,7 +6,7 @@ function validateForm() {
 }
 </script>
 
-<form name="register" onsubmit="return validateForm()" method="get" action="/staffmenu">
+<form name="register" onsubmit="return validateForm()" method="get" action="/visit">
     <h1>Register this Browser</h1> 
 
     <br>
