changed status to discontinued.

--- a/views/pages/fallsport/createForm.html
+++ b/views/pages/fallsport/createForm.html
@@ -10,8 +10,8 @@
     </div>
   
     <div class = "w3-input">
-      <label for="Status" value="Status">Display the Sport?</label>
-      <%- status %>
+      <label for="discontinued" value="discontinued">Discontinued?</label>
+      <%- discontinued %>
     </div>
   
     <div class = "w3-input">
