Fixed margin issues

--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -1,9 +1,10 @@
-<div class="w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black">
+<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black" style="width:25%">
 <form method="POST" action="/login">
     
     <h1>Davis &amp; Elkins College</h1>
     <h2>Naylor Learning Center</h2>
-
+    
+    <div class="w3-margin">
     <div>
         <input name="username" class="w3-input w3-border" placeholder="Username" autofocus type="text" required/>
     </div>
@@ -15,6 +16,6 @@
     <div class = "button w3-padding-16">
         <button class="w3-btn w3-white" type="submit">Login</button>
     </div>
-    
+    </div>
  </form>
 </div>
