--- a/views/pages/misc/browser.html
+++ b/views/pages/misc/browser.html
@@ -6,7 +6,7 @@ function validateForm() {
 }
 </script>
 
-<div class="w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black">
+<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black" style="width:25%">
 <form name="register" onsubmit="return validateForm()" method="get" action="/visit">
     <h1>Register this Browser</h1> 
     <div class="instructions">
