changed links to buttons

--- a/views/pages/misc/sports.html
+++ b/views/pages/misc/sports.html
@@ -6,10 +6,10 @@
     <div class="w3-row w3-container w3-left" style="width:50%">
     <div>    
         <h2>Fall Sports</h2>
-        <h3><a href="/fallsport/new" >Add New Fall Sport</a></h3>
+        <a class="w3-btn w3-white w3-padding-small" href="/fallsport/new" >Add New Fall Sport</a>
     </div>
 
-    <table class="w3-table w3-margin" id="fallTable">
+    <table class="w3-table" id="fallTable">
         <thead>
             <tr>
                 <th class="w3-center">Fall Sport</th>
@@ -44,10 +44,10 @@
     <div class="w3-row w3-container w3-right" style="width:50%">
     <div>
         <h2>Spring Sports</h2>
-        <h3><a href="/springsport/new" >Add New Spring Sport</a></h3>
+        <a class="w3-btn w3-white w3-padding-small" href="/springsport/new" >Add New Spring Sport</a>
     </div>
 
-    <table class="w3-table w3-margin" id="springTable">
+    <table class="w3-table" id="springTable">
         <thead>
             <tr>
                 <th class="w3-center">Spring Sport</th>
