--- a/views/pages/springsport/createForm.html
+++ b/views/pages/springsport/createForm.html
@@ -1,21 +1,21 @@
 
 
-<form method="POST" action="<%= action %>" >
+<form class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin" style="width:25%" method="POST" action="<%= action %>" >
   <div>
     <h2>Add A Spring Sport</h2>
   </div>
-    <div class = "w3-input">
+    <div class = "w3-input w3-border-0">
       <label for="name" value="name">Sport's Name</label>
       <input id="name" name="name" type="text" autofocus maxlength="255" required value="<%= formData.name %>" > 
     </div>
   
-    <div class = "w3-input">
+    <div class = "w3-input w3-border-0">
       <label for="discontinued" value="discontinued">Dicontinued?</label>
       <%- discontinued %>
     </div>
   
     <div class = "w3-input">
-      <button id="submitButton" type="submit">Submit</button>
+      <button class="w3-btn w3-white w3-margin" id="submitButton" type="submit">Submit</button>
     </div>
     
 
